--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <title>Projeto Redes Sociais</title>
 </head>
 <body>
-  
+  <main>
+    <section id="telefone">
+        <iframe src="home.html" name="tela" id="tela">
+        </iframe>
+    </section>
+    <section id="rede-social">
+
+    </section>
+  </main>
 </body>
 </html>
